# rnakinet

./: .gitignore  BonitoModel.ipynb  Dataloading.ipynb  Dataloading_test.ipynb  Evaluation.ipynb  Explore.ipynb  LICENSE.txt  LabelCleaning.ipynb  README.md  Speed_test.ipynb  Training-Copy1.ipynb  Training-Copy2.ipynb  Training-Copy3.ipynb  Training-Copy4.ipynb  Training.ipynb  Training_CORE.ipynb  Training_CORE_rodan.ipynb  Training_CORE_rodan_2022_2of5.ipynb  Training_CORE_rodan_2022_4of5.ipynb  Training_pretrained-Copy1.ipynb  Training_pretrained-Copy2.ipynb  Training_pretrained.ipynb  Training_pretrained_CORE.ipynb  Training_pretrained_checkpoints.ipynb  Training_pretrained_kfold_0.ipynb  Training_pretrained_kfold_1.ipynb  Training_pretrained_kfold_2.ipynb  Training_pretrained_kfold_3.ipynb  Training_pretrained_kfold_4.ipynb  bonito_pretrained.py  cnn_model.py  dataloading.py  dataloading2.py  datamap.py  deploy.yaml  env.yml  kfold_run.py  playground.ipynb  pyproject.toml  requirements.txt  (+6 more)
data_utils/: fast5_to_arrays.py  split_methods.py  trimming.py
rnakinet/: Batches_inspect.ipynb  Snakefile  environment.yaml  snakemake.sh
rnakinet/config/: config.yml
rnakinet/data_utils/: dataloading.py  dataloading_pod5.py  dataloading_pod5_batched.py  generators.py  model_loader.py  read_utils.py  workers.py
rnakinet/envs/: alignment.yaml  bam_splitting.yaml  gene_aggregation.yaml  inference.yaml  pod5_splitting.yaml  training.yaml  visual.yaml
rnakinet/halflives_data/: 3T3_PION_halflives.csv  3T3_mion_halflives.csv
rnakinet/models/: model.py  model_experimental.py  model_legacy.py  model_loader.py  rnakinet.ckpt  rnakinet_r10_5EU@v2.0.ckpt  rnakinet_r10_5EU_unpad@v1.0.ckpt  rnakinet_r10_padding_v1.ckpt
rnakinet/rules/: alignment.smk  basecalling.smk  data_split.smk  diagnostics.smk  halflives.smk  inference.smk  training.smk  visualizations.smk
rnakinet/scripts/: decay_read_limit_plot_multi.py  gene_to_preds.py  helpers.py  inference.py  plot_helpers.py  plot_pct_pos.py  plot_pod5_metrics.py  plot_pod5_stats.py  pod5_metrics.py  pod5_stats.py  pr_curve.py  pr_ratios.py  predict_halflives.py  (+3 more)
rnamodif/: Evaluation.ipynb  Result_visualization.ipynb  Snakefile  Untitled.ipynb  inference.py  model.py  model_uncut.py  rodan_seq_5eu.py
(+166 files in other folders)
