[metadata]
name = rnakinet
version = 1.0.0
description = Package for predicting 5EU in nanopore reads and predicting RNA halflives
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/maragkakislab/RNAkinet

[options]
packages = find:
python_requires = >=3.8, <3.11
install_requires =
    pandas
    torch>=2.0,<=2.2
    numpy==1.26.*
    ont-fast5-api
    scipy
    scikit-learn
    pysam
    tqdm
    
[options.entry_points]
console_scripts =
    rnakinet-inference = rnakinet.scripts.inference:main
    rnakinet-predict-halflives = rnakinet.scripts.predict_halflives:main

[options.package_data]
* = *.ckpt