[metadata]
name = rnakinet
version = 1.0.1
description = Package for predicting 5EU in nanopore reads and predicting RNA halflives
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/maragkakislab/RNAkinet

[options]
packages = find:
python_requires = >=3.8, <3.11
install_requires =
    numpy==1.23
    ont-fast5-api==4.1.1
    scipy==1.9.0
    scikit-learn==1.1.2
    pandas==1.5
    torch==2.2
    lightning==2.2
    torchmetrics==0.11.4
    torchvision==0.17
    pod5==0.3.23
    pysam
    tqdm

[options.entry_points]
console_scripts =
    rnakinet-inference = rnakinet.scripts.inference:main
    rnakinet-predict-halflives = rnakinet.scripts.predict_halflives:main

[options.package_data]
* = *.ckpt