[metadata]
name = rnakinet
version = 2.0.0
description = Package for predicting 5EU in nanopore reads and predicting RNA halflives
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/maragkakislab/RNAkinet

[options]
packages = find:
python_requires = >=3.8, <3.13
install_requires =
    numpy
    pandas
    scipy
    scikit-learn
    tqdm

    torch>=2.0
    lightning
    torchmetrics
    torchvision
    
    pod5
    ont-fast5-api
    pysam

[options.entry_points]
console_scripts =
    rnakinet-inference = rnakinet.scripts.inference:main
    rnakinet-predict-halflives = rnakinet.scripts.predict_halflives:main

[options.package_data]
* = *.ckpt